to be continued

--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+.container {
+	margin-top: 20px;
+}
+
 img {
   width: 100%;
 }
-
 
 .box {
 	width: 100%;
@@ -24,4 +27,18 @@ img {
 	object-fit: contain;
 	height: 100% !important;
 	width: 100% !important;
+}
+.fix {
+	display: block;
+	width: 100%;
+	position: fixed;
+}
+
+.yet {
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+}
+
+.rounded {
+	border-radius: 50% !important;
 }
